Fix title z-index

--- a/css/style.css
+++ b/css/style.css
@@ -8030,7 +8030,6 @@ ul:last-child {
   border-radius: 4px;
   border: 1px solid #9DC4D7;
   position: relative;
-  z-index: 1;
   padding: 1px;
   color: #0F3C4D;
   margin: 5px 0px;
